# qngl-optimizer

./: LICENSE  README.md  pyproject.toml  requirements.txt
docs/: PAPER.md  references.bib
examples/: sine_regression.ipynb (Colab-ready)
qngl/: __init__.py  metric.py  optimizer.py
